--- a/members/templates/registration/edit_profile.html
+++ b/members/templates/registration/edit_profile.html
@@ -4,7 +4,23 @@
 
 {% block content %}
 
-
+<head>
+    <style>
+        body {
+            background-color: rgb(215, 232, 247)
+        }
+        h1 {
+            color:rgb(44, 84, 117);
+            font-family:Bookman, URW Bookman L, serif ;
+            }
+        p {
+            color:rgb(7, 20, 63);
+            }
+        small {
+            font-style: italic
+        }
+      </style>
+</head>
 <h1>Edit Settings </h1><br><br>
 
 {{ user.profile.bio }} 
