--- a/members/templates/registration/login.html
+++ b/members/templates/registration/login.html
@@ -4,7 +4,20 @@
 
 {% block content %}
 
-
+<head>
+  <style>
+      body {
+          background-color: rgb(215, 232, 247)
+      }
+      h1 {
+          color:rgb(44, 84, 117);
+          font-family:Bookman, URW Bookman L, serif ;
+          }
+      p {
+          color:rgb(7, 20, 63);
+          }
+    </style>
+</head>
 <h1>Login...</h1><br><br>
 
 <div class="form-group">
