--- a/members/templates/registration/password_success.html
+++ b/members/templates/registration/password_success.html
@@ -3,7 +3,20 @@
 {% block title %} Password updated {% endblock %}
 
 {% block content %}
-
+<head>
+    <style>
+        body {
+            background-color: rgb(215, 232, 247)
+        }
+        h1 {
+            color:rgb(44, 84, 117);
+            font-family:Bookman, URW Bookman L, serif ;
+            }
+        p {
+            color:rgb(7, 20, 63);
+            }
+      </style>
+</head>
 <br><br>
 <h1>Your password was changed successfully ! </h1><br><br>
 
