--- a/theblog/templates/categories.html
+++ b/theblog/templates/categories.html
@@ -1,32 +1,79 @@
 {% extends 'base.html' %}
      
 {% block content %}
+<head>
+    <style>
+        body {
+            background-color: rgb(215, 232, 247)
+        }
+        h1 {
+            color:rgb(44, 84, 117);
+            font-family:Bookman, URW Bookman L, serif ;
+            }
+        p {
+            color:rgb(38, 66, 158);
+            }
+        #bloc {
+          transition: 1s;
 
-    {% if category_posts %}
-        <h1>{{ cats }}</h1>
+        }
+        #bloc:hover {
+            transform: scale(1.1);
+         
+        }
+
+        .card {
+            background-color: rgb(132, 190, 223);
+        }
+
+      </style>
+</head>
+{% if category_posts %}
+<div style="text-transform: uppercase;"> <center><h1>{{ cats }}</h1></center><hr></div>
 
         <ul>
-        {% for post in category_posts %}
+       
 
-            <li><a href="{% url 'article-detail' post.pk %}">
-                {{ post.title }}</a> 
-                - <b>{{ post.category }}</b>
-                - {{ post.author.first_name }} 
-                {{ post.author.last_name }}
-                - {{ post.post_date}}
-                <small>
-                    {% if user.is_authenticated %}
-                    <a href="{% url 'update_post' post.pk %}">Edit</a>
-                    <a href="{% url 'delete_post' post.pk %}">Delete</a>
-                    {% endif %}
-                    </small> <br>
-                {{ post.body | slice:":150" | safe  }}</li>
 
-        {% endfor %}
+            {% for post in category_posts %}
+                <br><br>
+                <div class="container overflow-hidden" id="bloc">
+                    <div class="row gy-5">
+                    <div class="col-6" >
+                        <div class="p-3 border bg-light"><div class="card" style="width: 18rem;">
+                            <!-- <img src="..." class="card-img-top" alt="..."> -->
+                            <div class="card-body">
+                            <h5 class="card-title">{{ post.title }}</h5>
+                            <p class="card-text">{{ post.snippets }}</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Category : <a class="btn btn-outline-dark btn-sm" href="{% url 'category' post.category|slugify %}">
+                                <b><div style="text-transform: uppercase;">{{ post.category }}</div></b></a></li>
+                            <li class="list-group-item">Author : {{ post.author.first_name }} 
+                                {{ post.author.last_name }}</li>
+                            <li class="list-group-item"><a class="btn btn-outline-info" href="{% url 'article-detail' post.pk %}">Read More</a></li>
+                            </ul>
+                            {% if user.is_authenticated %}
+                                {% if user.id == post.author.id %}
+                                    <div class="card-body">
+                                    <a class="btn btn-secondary btn-sm" href="{% url 'update_post' post.pk %}" class="card-link">Edit</a>
+                                    <a  class="btn btn-secondary btn-sm" href="{% url 'delete_post' post.pk %}" class="card-link">Delete</a>
+                                    </div>
+                                {% endif %}
+                            {% endif %}
+                        </div></div><br><br><br>
+                    </div>
+            {% endfor %}
 
-    {% else %}
 
-        <h2>Sorry this page does not exit...</h2>
+
+
+
+{% else %}
+
+        <h2>There is no post in this category yet</h2>
+        <br><br>
+        <p>You can add a post <a href="{% url 'add_post' %}">here </a>!</p>
 
 {% endif %}
 </ul>
