--- a/theblog/templates/category_list.html
+++ b/theblog/templates/category_list.html
@@ -2,8 +2,21 @@
      
 {% block title %} Blog Categories {% endblock %}
 {% block content %}
-
-<h1>Blog Categories </h1>
+<head>
+    <style>
+        body {
+            background-color: rgb(215, 232, 247)
+        }
+        h1 {
+            color:rgb(44, 84, 117);
+            font-family:Bookman, URW Bookman L, serif ;
+            }
+        p {
+            color:rgb(7, 20, 63);
+            }
+      </style>
+</head>
+<div style="text-transform: uppercase;"><center><h1>Categories</h1></center></div><hr><br><br>
 
     {% for item in cat_menu_list %}
     <h4> <a class="dropdown-item" 
