--- a/members/templates/registration/register.html
+++ b/members/templates/registration/register.html
@@ -3,7 +3,20 @@
 {% block title %} Register {% endblock %}
 
 {% block content %}
-
+<head>
+  <style>
+      body {
+          background-color: rgb(215, 232, 247)
+      }
+      h1 {
+          color:rgb(44, 84, 117);
+          font-family:Bookman, URW Bookman L, serif ;
+          }
+      p {
+          color:rgb(7, 20, 63);
+          }
+    </style>
+</head>
 
 <h1>Register...</h1><br><br>
 
