--- a/theblog/templates/add_category.html
+++ b/theblog/templates/add_category.html
@@ -4,8 +4,22 @@
 
 {% block content %}
 
+<head>
+    <style>
+        body {
+            background-color: rgb(215, 232, 247)
+        }
+        h1 {
+            color:rgb(44, 84, 117);
+            font-family:Bookman, URW Bookman L, serif ;
+            }
+        p {
+            color:rgb(7, 20, 63);
+            }
+      </style>
+</head>
+<div style="text-transform: uppercase;"><center><h1>Add Category</h1></center></div><hr><br><br>
 
-<h1>Add Category...</h1><br><br>
 {% if user.is_authenticated %}
 <div class="form-group">
     <form method="POST">
