--- a/theblog/templates/add_post.html
+++ b/theblog/templates/add_post.html
@@ -3,9 +3,22 @@
 {% block title %} Create a new post ! {% endblock %}
 
 {% block content %}
+<head>
+    <style>
+        body {
+            background-color: rgb(215, 232, 247)
+        }
+        h1 {
+            color:rgb(44, 84, 117);
+            font-family:Bookman, URW Bookman L, serif ;
+            }
+        p {
+            color:rgb(7, 20, 63);
+            }
+      </style>
+</head>
 
-
-<h1>Add a Post</h1><br><br>
+<div style="text-transform: uppercase;"><center><h1>Add Post</h1></center></div><hr><br><br>
 {% if user.is_authenticated %}
 <div class="form-group">
     <form method="POST" enctype="multipart/form-data">
