--- a/theblog/templates/base.html
+++ b/theblog/templates/base.html
@@ -10,6 +10,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <title>{% block title %} GO Blog {% endblock %}</title>
+
+    
+      <style>
+          body {
+              background-color: rgb(215, 232, 247)
+          }
+          h1 {
+              color:rgb(44, 84, 117);
+              font-family:Bookman, URW Bookman L, serif ;
+              }
+          p {
+              color:rgb(7, 20, 63);
+              }
+        </style>
+  
   </head>
   <body>
 
@@ -70,11 +85,19 @@
                 {% endif %}
           
             </ul>
-                {% if user.is_authenticated %}
+            {% if user.is_authenticated %}
+                
+                
                     <ul class="navbar-nav ml-auto">
                       <li class="nav-item dropdown">
+                        {% if post.author.profile.profile_page %}
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          {{ user.first_name }} {{ user.last_name }}    
+                          {{ user.first_name }} {{ user.last_name }} 
+                        {% else %} 
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          {{ user.username}}     
+                        </a>
+                        {% endif %}  
                         </a>
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                           <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Edit Setting</a></li>
@@ -88,13 +111,12 @@
                           {% endif %}
                     
                             <a class="dropdown-item" href="{% url 'logout' %}"> Logout </a>
-                  
                       
                         </ul>
                       </li>
                     <br><br>
                     </ul> 
-                  {% endif %}
+              {% endif %}
                 
           </div>
         </div>
