--- a/theblog/templates/delete_post.html
+++ b/theblog/templates/delete_post.html
@@ -3,10 +3,23 @@
 {% block title %} Delete Post{% endblock %}
 
 {% block content %}
-
+<head>
+    <style>
+        body {
+            background-color: rgb(215, 232, 247)
+        }
+        h1 {
+            color:rgb(44, 84, 117);
+            font-family:Bookman, URW Bookman L, serif ;
+            }
+        p {
+            color:rgb(7, 20, 63);
+            }
+      </style>
+</head>
 {% if user.is_authenticated %}
     {% if user.id == post.author.id %}
-        <h1>Delete Post</h1><br><br>
+    <div style="text-transform: uppercase;"><center><h1>Delete Post</h1></center></div><hr><br><br>
 
         <h3>Delete: {{ post.title }}</h3>
 
