--- a/members/templates/registration/create_user_profile_page.html
+++ b/members/templates/registration/create_user_profile_page.html
@@ -18,7 +18,7 @@
       </style>
 </head>
 {% if user.is_authenticated %}
-<h1>Create A Profile Page </h1><br><br>
+<div style="text-transform: uppercase;"><center><h1>Create A Profile Page</h1></center></div><hr><br><br>
 
 <div class="form-group">
     <form method="POST" enctype="multipart/form-data">
