--- a/members/templates/registration/edit_profile.html
+++ b/members/templates/registration/edit_profile.html
@@ -21,7 +21,7 @@
         }
       </style>
 </head>
-<h1>Edit Settings </h1><br><br>
+<div style="text-transform: uppercase;"><center><h1>Edit Settings</h1></center></div><hr><br><br>
 
 {{ user.profile.bio }} 
 
