--- a/members/templates/registration/login.html
+++ b/members/templates/registration/login.html
@@ -18,7 +18,7 @@
           }
     </style>
 </head>
-<h1>Login...</h1><br><br>
+<div style="text-transform: uppercase;"><center><h1>Log In</h1></center></div><hr><br><br>
 
 <div class="form-group">
     <form method="POST">
