--- a/members/templates/registration/user_profile.html
+++ b/members/templates/registration/user_profile.html
@@ -19,7 +19,7 @@
         }
     </style>
 </head>
-<h1>Profile </h1>
+<div style="text-transform: uppercase;"><center><h1>Profile</h1></center></div><hr><br><br>
 
 <br>
 
