--- a/members/templates/registration/change-password.html
+++ b/members/templates/registration/change-password.html
@@ -18,7 +18,7 @@
       </style>
 </head>
 
-<h1>Change Password </h1><br><br>
+<div style="text-transform: uppercase;"><center><h1>Change Password</h1></center></div><hr><br><br>
 
 <div class="form-group">
     <form method="POST">
