--- a/members/templates/registration/edit_profile_page.html
+++ b/members/templates/registration/edit_profile_page.html
@@ -18,7 +18,7 @@
             }
       </style>
 </head>
-<h1>Edit Profile</h1><br><br>
+<div style="text-transform: uppercase;"><center><h1>Edit Profile</h1></center></div><hr><br><br>
 {% if user.is_authenticated %}
     {% if user.id == profile.user.id %}
 <div class="form-group">
