--- a/members/templates/registration/register.html
+++ b/members/templates/registration/register.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <head>
-  <style>
+   <style>
       body {
           background-color: rgb(215, 232, 247)
       }
@@ -15,11 +15,17 @@
       p {
           color:rgb(7, 20, 63);
           }
-    </style>
+    </style> 
 </head>
 
-<h1>Register...</h1><br><br>
+<div style="text-transform: uppercase;"><center><h1>Register</h1></center></div><hr><br><br>
 
+{% if form.errors %}
+ {% for error in form.errors.values %}
+
+  <p>{{ error }}</p>
+  {% endfor %}
+{% endif %}
 <div class="form-group">
     <form method="POST">
 
